# dbtc

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CNAME  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test.py  versions.json
.github/workflows/: build.yml  docs.yml  publish.yml  run-and-test.yml
0.1.4/: 404.html  index.html
0.1.4/changelog/: index.html
0.1.4/guide/cloud/: index.html
0.1.4/guide/intro/: index.html
0.1.4/guide/metadata/: index.html
0.1.4/js/: custom.js
0.1.4/overrides/: main.html
0.1.4/search/: search_index.json
0.11/: 404.html  index.html
0.11/changelog/: index.html
0.11/guide/autoscaling_ci/: index.html
0.11/guide/cloud/: index.html
0.11/guide/intro/: index.html
0.11/guide/metadata/: index.html
0.11/guide/restart_from_failure/: index.html
0.11/guide/semantic_layer/: index.html
0.11/search/: search_index.json
0.2/: 404.html  index.html  sitemap.xml
0.2.0/: 404.html  sitemap.xml
0.2.0/guide/metadata/: index.html
0.2.0/search/: search_index.json
0.2/changelog/: index.html
0.2/guide/cloud/: index.html
0.2/guide/intro/: index.html
0.2/guide/metadata/: index.html
0.2/guide/restart_from_failure/: index.html
0.2/search/: search_index.json
0.3/: 404.html  index.html  sitemap.xml
0.3/changelog/: index.html
0.3/guide/autoscaling_ci/: index.html
0.3/guide/cloud/: index.html
0.3/guide/intro/: index.html
0.3/guide/metadata/: index.html
0.3/guide/restart_from_failure/: index.html
0.3/search/: search_index.json
0.4/: index.html  sitemap.xml
0.4/changelog/: index.html
0.4/guide/autoscaling_ci/: index.html
0.4/guide/cloud/: index.html
0.4/guide/intro/: index.html
0.4/guide/restart_from_failure/: index.html
0.4/search/: search_index.json
0.8/: 404.html  index.html  objects.inv
0.8/changelog/: index.html
0.8/search/: search_index.json
0.9/: 404.html  index.html
0.9/changelog/: index.html
0.9/search/: search_index.json
artifacts/: metadata_schema.json
changelog/: index.html
css/: extra.css
dbtc/: __init__.py  _version.py  cli.py  console.py  utils.py
dbtc/client/: admin.py  base.py  main.py  metadata.py  schema.py  semantic_layer.py
dbtc/models/: job.py  semantic_layer.py  webhooks.py
dbtc_api/: __init__.py  cli.py
dbtc_api/client/: base.py  main.py
dbtc_metadata_api/: __init__.py  client.py  schema.py
dbtc_metadata_api/client/: base.py  main.py
docs/: CNAME  changelog.md  index.html  index.md
docs/docs/: index.md
docs/guide/: autoscaling_ci.md  cloud.md  intro.md  metadata.md  restart_from_failure.md  semantic_layer.md
docs/js/: custom.js
examples/: autoscaling_ci.yml  github_autoscaling_ci.yml  github_restart_from_failure.yml
guide/cloud/: index.html
guide/intro/: index.html
guide/metadata/: index.html
js/: termynal.js
latest/changelog/: index.html
latest/overrides/: main.html
overrides/: main.html
search/: search_index.json
tests/: conftest.py  test_cli.py  test_cloud.py  test_metadata.py  test_restart_from_failure.py  test_semantic_layer.py  test_trigger_job_with_autoscaling.py
(+38 files in other folders)
