[tool.poetry]
name = "dbtc"
version = "0.5.0"
description = "An unaffiliated python wrapper for dbt Cloud APIs"
authors = ["Doug Guthrie <douglas.p.guthrie@gmail.com>"]
documentation = "https://dbtc.dpguthrie.com"
keywords=["dbt", "requests", "API", "dbt Cloud"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
sgqlc = "^15.0"
requests = "^2.27.1"
typer = {extras = ["all"], version = "^0.6.1"}
rudder-sdk-python = "^1.0.6"
pydantic = "^1.10.5"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pre-commit = "^2.17.0"
isort = "^5.10.1"
mypy = "^0.931"
flake8 = "^4.0.1"
pytest = "^7.0.1"
pytest-dependency = "^0.5.1"
types-requests = "^2.27.13"
ipython = "^8.2.0"
coverage = "^6.3.2"
pytest-cov = "^3.0.0"
mkdocs-material = "^8.2.13"

[tool.poetry.scripts]
dbtc = "dbtc.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
